2013-05-03  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents_simple/incidents.php: Fixed bug creating
	new incident.
	
	* include/functions_incidents.php
	  operation/incidents_simple/incident.php: Fixed bug uploading
	files with blanks in name.

2013-04-30  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_detail.php: Changed
	inventory search.
	
	* include/functions_config.php: Added param 'working_weekends'.

2013-04-30 Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: New function incidents_get_incident_slas, supporting
	new way to get slas using groups.
	* include/functions_db.php, 
	* include/integria_cron.php: Adapted sla functions to new sla definition.
	* include/functions_inventories.php: Remove deprecated function get_incident_slas.

2013-04-30 Dario Rodriguez <dario@artica.es>

	* operation/side_menu.php: Fixed an error printing side menu
	of incidents.
	* integria_db.sql,
	godmode/grupos/configurar_grupo.php,
	godmode/grupos/lista_grupos.php: Now groups don't use inventory
	objects, it uses directly SLA for incidents.

2013-04-30 Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_dashboard_detail.php: Fixed a error
	in a string.
	* operation/incidents/incident_dashboard.php: Created first version
	of incident overview.

2013-04-30 Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_detail.php: Fixed a bug updating
	SLA disabled fiedl.
 	* operation/incidents/incident_dashboard_detail.php: Now sla disable
	widget doesn't shows any information is SLA is disabled.

2013-04-30  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_detail.php: Changed
	inventory search.
	
	* include/functions_config.php: Added param 'working_weekends'.

2013-04-30  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_detail.php: Fixed bug:
	'SLA disabled' and 'Notify changes by email' appears
	disabled.

2013-04-30  Dario Rodriguez <dario@artica.es>
